Version 3.1 (beta)
Correction de bugs de fonctionnement
Tests opérationnels corrigés